# cultural-categorizer

./: .coverage  .pre-commit-config.yaml  CHANGELOG.md  Makefile  main.py  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
data/: taxonomy.json
src/core/: cli.py  embedder.py  normalizer.py  taxonomy_loader.py
tests/: test_smoke.py
