[project]
name = "cultural-categorizer"
version = "0.1.1"
description = "A batteries included taxonomy service for the culture sector."
authors = [{ name = "LukV", email = "luk.verhelst@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.1",
    "ruff>=0.11.2",
    "typer>=0.15.2",
    "commitizen>=4.4.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.9.4",
]

[project.scripts]
cli = "core.cli:app"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.commitizen] # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "pep621"

[tool.uv]
package = true
