[project]
name = "cultural-categorizer"
version = "0.1.2"
description = "A batteries included taxonomy service for the culture sector."
authors = [{ name = "LukV", email = "luk.verhelst@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

dependencies = [
    "accelerate>=1.6.0",
    "fastapi[standard]>=0.115.12",
    "numpy>=2.2.4",
    "pydantic>=2.11.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.2",
    "transformers>=4.51.0",
    "typer>=0.15.2",
    "uv>=0.6.12",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "commitizen>=4.4.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "debugpy>=1.8.1",
]

[project.scripts]
clt = "core.cli:app"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"

[tool.commitizen] # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "pep621"

[tool.uv]
package = true
